# LanguageRecognizer

./: MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
dev_scripts/: eval.py  experiment_pipeline.py
docs/: Experiment_notes.md  dev_guidelines.md
experiment_data/ebible_corpus/: preprocess_ebible.py  readme.md
experiment_data/vachan_data/: preprocess_vachan_data.py  readme.md
models/: Arabic_model.joblib  Arabic_model_vectorizer.joblib  Arabic_vectorizer.joblib  Bengali_model.joblib  Bengali_model_vectorizer.joblib  Bengali_vectorizer.joblib  Cyrillic_model.joblib  Cyrillic_model_vectorizer.joblib  Cyrillic_vectorizer.joblib  Devanagari_model.joblib  Devanagari_model_vectorizer.joblib  Devanagari_vectorizer.joblib  Ethiopic_model.joblib  Ethiopic_vectorizer.joblib  Gujarati_model.joblib  Gujarati_vectorizer.joblib  Gurmukhi_model.joblib  Gurmukhi_model_vectorizer.joblib  Hebrew_model.joblib  Hebrew_model_vectorizer.joblib  Hebrew_vectorizer.joblib  Latin_vectorizer.joblib  Malayalam_model.joblib  Malayalam_model_vectorizer.joblib  Malayalam_vectorizer.joblib  Myanmar_model.joblib  Myanmar_vectorizer.joblib  Oriya_model.joblib  Oriya_vectorizer.joblib  Tamil_model.joblib  Tamil_model_vectorizer.joblib  Telugu_model.joblib  Telugu_model_vectorizer.joblib  Thai_model.joblib  Thai_model_vectorizer.joblib  readme.md
src/: data_prep.py  eval.py  experiment_pipeline.py  langrecognizer.py  list_lang_script.py  model_handler.py  modellist.py  script_detector.py  scriptlist.py  train.py
src/language_detect/: __init__.py  addlanguage.py  data_prep.py  evaluation.py  langrecognizer.py  ld_dir.py  list_lang_script.py  model_handler.py  modellist.py  script_detector.py
src/language_detect/data/: langlist.py  modellist.py
src/language_detect/models/: Devanagari_model.joblib  Devanagari_vectorizer.joblib
