[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "language-detect"
dependencies = [
    "joblib==1.4.2", 
    "unicodedataplus==16.0.0", 
    "fuzzywuzzy==0.18.0", 
    "Levenshtein==0.26.1",
    "huggingface-hub==0.26.2",
    "scikit-learn==1.5.2", 
    "pandas==2.2.3",
    "regex==2024.9.11"
]
requires-python = ">=3.8"
authors = [
    {name = "BCS Team", email = "joel@bridgeconn.com"},
]
maintainers = [ 
    {name = "Kavitha Raju", email = "Kavitha.Raju@bridgeconn.com"}, 
    {name = "Gladys Ann Varughese", email = "gladysann1307@gmail.com"},
]
description = "This is a language detection library using ML models"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["language detection", "machine learning", "script detection", "natural language processing", "text classification", "multilingual"]
classifiers = [
    "Development Status :: 4 - Beta", 
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
version = "0.0.7"

[project.urls]
Repository = "https://github.com/Bridgeconn/LanguageRecognizer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
language_detect = ["models/*.joblib", "data/*.py"]
